Update README, revert the changes